--- a/css/main.css
+++ b/css/main.css
@@ -166,9 +166,9 @@ body {
 
 .avatar {
   border-radius: 150px;
-  border: 4px solid #6161A5; /* color change? */
-  height: 150px;
-  width: 150px;
+  border: 2px solid #333; /* color change? */
+  height: 225px;
+  width: 225px;
   margin: 0 auto 12.5px auto;
   overflow: hidden;
 }
@@ -222,7 +222,8 @@ body {
    Particlejs
    ========= */
 canvas { display: block;} /* ---- particles.js container ---- */
-#particles-js { position: absolute; width: 100%; height: 100%; background-color: #323840; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } 
+/*323840*/
+#particles-js { position: absolute; width: 100%; height: 100%; background-color: #000; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } 
 
 /* ---- stats.js ---- */
 /*.count-particles { background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; }
@@ -232,6 +233,117 @@ canvas { display: block;} /* ---- particles.js container ---- */
 #stats { border-radius: 3px 3px 0 0; overflow: hidden; }
 .count-particles { border-radius: 0 0 3px 3px; }
 */
+
+/* ========
+   Social
+   ======= */
+/** {
+  margin: 0;
+  padding: 0;
+  color: inherit;
+  box-sizing: inherit;
+}
+*:focus {
+  outline: none;
+}
+
+html {
+  box-sizing: border-box;
+}*/
+
+/*body {
+  background-color: #323840;
+}
+*/
+.social-buttons {
+  height: 60px;
+  margin: auto;
+  font-size: 0;
+  text-align: center;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.social-button {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  margin: 0 10px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  opacity: .99;
+  border-radius: 28%;
+  border-color: #fff;
+  -webkit-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
+          transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
+}
+.social-button:before {
+  content: '';
+  background-color: #000;
+  width: 120%;
+  height: 120%;
+  position: absolute;
+  top: 100%;
+  left: -100%;
+/*  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
+          transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);*/
+}
+.social-button .fa {
+  font-size: 38px;
+  vertical-align: middle;
+  -webkit-transform: scale(0.8);
+      -ms-transform: scale(0.8);
+          transform: scale(0.8);
+  -webkit-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
+          transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
+}
+/*.social-button.linkedin-square:before {
+  background-color: #0177B5;
+}
+*/.social-button.linkedin-square .fa {
+  color: #0177B5;
+}
+/*.social-button.envelope-o:before {
+  background-color: #DC4A38;
+}
+*/.social-button.envelope-o .fa {
+  color: #DC4A38;
+}
+/*.social-button.github:before {
+  background-color: #000;
+}
+*/.social-button.github .fa {
+  color: #fff;
+}
+
+/*.social-button.stack-overflow:before {
+  background-color: #ED780E;
+}*/
+.social-button.stack-overflow .fa {
+  color: #ED780E;
+}
+.social-button:hover:before {
+  top: -10%;
+  left: -10%;
+}
+.social-button:hover .fa {
+/*  color: #fff;
+*/  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.social-button:focus {
+  opacity: .85;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
