--- a/css/main.css
+++ b/css/main.css
@@ -200,14 +200,27 @@ body {
 }
 
 .top__title {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+/*  font-family: 'PT sans', sans-serif;
+*/
+/*font-family: 'Droid Serif', serif;*/
+  font-family: 'Prociono', sans-serif;
   color: white;
   margin-bottom: 6.25px;
-  text-transform: uppercase;
+  font-size: 33px;
+
+/*text-shadow: rgb(71, 71, 71) 2px 1px 2px;
+*/
 }
 
 #tagline {
   visibility: hidden;
+  font-family: cursive;
+/*  color: #818D92;
+*/
+ color: #777;
+
+text-shadow: rgba(255, 255, 255, 0.2) 2px 2px 3px;
+
 }
 
 .top__text {
@@ -218,12 +231,61 @@ body {
 }
 
 
+/* ========
+  Typed JS
+  ========= */
+
+  .typed-cursor{
+            opacity: 1;
+            font-weight: 100;
+            -webkit-animation: blink 0.7s infinite;
+            -moz-animation: blink 0.7s infinite;
+            -ms-animation: blink 0.7s infinite;
+            -o-animation: blink 0.7s infinite;
+            animation: blink 0.7s infinite;
+        }
+        @-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-webkit-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-moz-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-ms-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+        @-o-keyframes blink{
+            0% { opacity:1; }
+            50% { opacity:0; }
+            100% { opacity:1; }
+        }
+
 /* =========
    Particlejs
    ========= */
-canvas { display: block;} /* ---- particles.js container ---- */
+canvas { 
+  display: block;
+} /* ---- particles.js container ---- */
 /*323840*/
-#particles-js { position: absolute; width: 100%; height: 100%; background-color: #000; background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } 
+#particles-js { 
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%; } 
 
 /* ---- stats.js ---- */
 /*.count-particles { background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; }
@@ -278,13 +340,11 @@ html {
   overflow: hidden;
   opacity: .99;
   border-radius: 28%;
-  border-color: #fff;
   -webkit-transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
           transition: all 0.35s cubic-bezier(0.31, -0.105, 0.43, 1.59);
 }
 .social-button:before {
   content: '';
-  background-color: #000;
   width: 120%;
   height: 120%;
   position: absolute;
