--- a/css/main.css
+++ b/css/main.css
@@ -199,49 +199,40 @@ body {
   height: 100%;
 }
 
-/*.section.style1 {
-  background-color: #3ba666;
+
+.section__skill {
+  padding: 1px;
+  height: 100%;
+  background-color: #0DAB76;
   -moz-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
   -webkit-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
   -o-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
   -ms-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-  background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-  color: #ffffff;
-}*/
-
-.section.style1 {
-  background-color: #3ba666;
-  /*-moz-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-  -webkit-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-  -o-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);
-  -ms-background-image: linear-gradient(60deg, #4dac71 50%, #3ba666 50%);*/
-  background-image: linear-gradient(60deg, #0DAB76 50%, #0DAB76 50%);
+  background-image: linear-gradient(60deg, #0DAB76 50%, #0FA371 50%);
   color: #ffffff;
 }
 
-
 .top__title {
-/*  font-family: 'PT sans', sans-serif;
-*/
-/*font-family: 'Droid Serif', serif;*/
   font-family: 'Prociono', sans-serif;
   color: white;
   margin-bottom: 6.25px;
-  font-size: 33px;
-
-/*text-shadow: rgb(71, 71, 71) 2px 1px 2px;
-*/
+  font-size: 34px;
 }
+
+.skill__title {
+  font-family: 'Prociono', sans-serif;
+  color: #fff;
+  margin: 3%;
+  font-size: 35px;
+  text-align: center;
+}
+
 
 #tagline {
   visibility: hidden;
   font-family: cursive;
-/*  color: #818D92;
-*/
- color: #777;
-
-text-shadow: rgba(255, 255, 255, 0.2) 2px 2px 3px;
-
+  color: #999;
+  text-shadow: rgba(255, 255, 255, 0.2) 2px 2px 3px;
 }
 
 .top__text {
@@ -252,6 +243,34 @@ text-shadow: rgba(255, 255, 255, 0.2) 2px 2px 3px;
 }
 
 
+/* =============================================================================
+    Div Layout
+   ===========================================================================*/
+
+.grid{
+  display : block;
+  width: 95%;
+  margin : 60px auto 0 auto;
+}
+
+.columnLeft{
+background-color : rgba(255, 0, 0, 0.5);
+float : left;
+clear : none;
+margin: 1em;
+}
+.columnMid{
+background-color : rgba(0, 255, 0, 0.5);
+float : left;
+clear : none;
+margin: 1em;
+}
+.columnRight{
+background-color : rgba(0, 0, 255, 0.5);
+float : left;
+clear : none;
+margin: 1em;
+}
 /* ========
   Typed JS
   ========= */
