--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
+@font-face {
+   font-family: Chancery;
+   src: url(Apple_Chancery.ttf);
+}
+
+
 html {
     color: #222;
     font-size: 1em;
@@ -155,13 +161,13 @@ nav a:hover {
    Rahat's custom styles
    ========================================================================== */
 body {
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "proxima-nova", sans-serif;
-  line-height: 1.5625em;
-  letter-spacing: 0.3px;
-  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Raleway', sans-serif;
   height: 100%;
+  letter-spacing: 0.3px;
+  line-height: 1.5625em;
+  background-color: #0C0910;
 }
 
 .avatar {
@@ -219,18 +225,9 @@ body {
   font-size: 34px;
 }
 
-.skill__title {
-  font-family: 'Prociono', sans-serif;
-  color: #fff;
-  margin: 3%;
-  font-size: 35px;
-  text-align: center;
-}
-
-
 #tagline {
   visibility: hidden;
-  font-family: cursive;
+  font-family: 'Chancery', cursive;
   color: #999;
   text-shadow: rgba(255, 255, 255, 0.2) 2px 2px 3px;
 }
@@ -244,33 +241,47 @@ body {
 
 
 /* =============================================================================
-    Div Layout
+    Skills Section
    ===========================================================================*/
-
-.grid{
-  display : block;
-  width: 95%;
-  margin : 60px auto 0 auto;
+.skill__title {
+    font-family: 'Prociono', sans-serif;
+    color: #fff;
+    text-align: center;
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);;
 }
+
+/*.grid{
+    display : block;
+    width: 95%;
+    margin : 60px auto 0 auto;
+}*/
 
 .columnLeft{
-background-color : rgba(255, 0, 0, 0.5);
-float : left;
-clear : none;
-margin: 1em;
+    float : left;
+    width: 33.33%;
 }
+
 .columnMid{
-background-color : rgba(0, 255, 0, 0.5);
-float : left;
-clear : none;
-margin: 1em;
+    float : left;
+    width: 33.33%;
 }
+
 .columnRight{
-background-color : rgba(0, 0, 255, 0.5);
-float : left;
-clear : none;
-margin: 1em;
+    float : left;
+    width: 33.33%;
 }
+
+.progress {
+    width: 200px;
+    margin: auto;
+}
+
+#skill__footer {
+    text-align: center;
+    color: #eee;
+    line-height: 250%;
+}
+
 /* ========
   Typed JS
   ========= */
@@ -313,11 +324,11 @@ margin: 1em;
 /* =========
    Particlejs
    ========= */
-canvas { 
+canvas {
   display: block;
 } /* ---- particles.js container ---- */
 /*323840*/
-#particles-js { 
+#particles-js {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -325,7 +336,7 @@ canvas {
   background-image: url("");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 50% 50%; } 
+  background-position: 50% 50%; }
 
 /* ---- stats.js ---- */
 /*.count-particles { background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; }
