--- a/css/main.css
+++ b/css/main.css
@@ -272,8 +272,55 @@ body {
 }
 
 .progress {
+    position:relative;
     width: 200px;
+    height: 200px;
     margin: auto;
+}
+
+#progress1 {
+    background: url('../img/logos/javascript.svg') no-repeat center;
+    background-size: 60% 60%;
+}
+
+#progress2 {
+    background: url('../img/logos/nodejs.svg') no-repeat;
+    background-size: 75% 75%;
+    background-position: 50% 150%;
+}
+
+#progress3 {
+    background: url('../img/logos/java.svg') no-repeat center;
+    background-size: 65% 65%;
+}
+
+#progress4 {
+    background: url('../img/logos/angular.svg') no-repeat;
+    background-size: 65% 65%;
+    background-position: 55% 50%;
+}
+
+#progress5 {
+    background: url('../img/logos/python.svg') no-repeat center;
+    background-size: 60% 60%;
+}
+
+#progress6 {
+    background: url('../img/logos/android.svg') no-repeat center;
+    background-size: 60% 60%;
+}
+
+/*div {
+    border: 1px solid red;
+}*/
+
+.progress img {
+    /*width: 200px;
+    height: 200px;*/
+}
+
+.progress canvas {
+  position: absolute;
 }
 
 #skill__footer {
