--- a/css/main.css
+++ b/css/main.css
@@ -202,11 +202,16 @@ body {
     background-size: cover;
     height: 95vh;
     position: relative;
-    /*margin-top: -70px;*/
 }
 
 .project__description {
     width: 50%;
+    float: right;
+    margin-top: 100px;
+}
+
+.project__image {
+    float: left;
 }
 
 .project__anchor {
